TypedLama/regression/compile_error/test003.lama
-- check that function does not conform Double -> Double formula
local double = fun (x :: Double) :: Double {
  2*x
};